@@ -32,28 +32,28 @@ public class MemoryPropertyEditor extends PropertyEditorSupport {
 		Pattern p = Pattern.compile("^\\s*(\\d+)\\s*(b)?\\s*$",Pattern.CASE_INSENSITIVE);
 		Matcher m = p.matcher(text);
 		if (m.matches()) {
-			setValue(new Long(Long.parseLong(m.group(1))));
+			setValue(Long.valueOf(Long.parseLong(m.group(1))));
 			return;
 		}
 
 		p = Pattern.compile("^\\s*(\\d+)\\s*k(b)?\\s*$",Pattern.CASE_INSENSITIVE);
 		m = p.matcher(text);
 		if (m.matches()) {
-			setValue(new Long(Long.parseLong(m.group(1)) * 1024));
+			setValue(Long.valueOf(Long.parseLong(m.group(1)) * 1024));
 			return;
 		}
 
 		p = Pattern.compile("^\\s*(\\d+)\\s*m(b)?\\s*$", Pattern.CASE_INSENSITIVE);
 		m = p.matcher(text);
 		if (m.matches()) {
-			setValue(new Long(Long.parseLong(m.group(1)) * 1024 * 1024 ));
+			setValue(Long.valueOf(Long.parseLong(m.group(1)) * 1024 * 1024 ));
 			return;
 		}
 
 		p = Pattern.compile("^\\s*(\\d+)\\s*g(b)?\\s*$", Pattern.CASE_INSENSITIVE);
 		m = p.matcher(text);
 		if (m.matches()) {
-			setValue(new Long(Long.parseLong(m.group(1)) * 1024 * 1024 * 1024 ));
+			setValue(Long.valueOf(Long.parseLong(m.group(1)) * 1024 * 1024 * 1024 ));
 			return;
 		}
 
